--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/joy": "^5.0.0-beta.7",
     "bootstrap": "^5.3.1",
+    "dotenv": "^16.3.1",
+    "email-js": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-spinners": "^0.13.8",
